--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="col d-flex flex-column align-items-start gap-2">
               <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/Real-E.jpg" alt="">
               <h3 class="fw-bold">Hot Properties..</h3>
-              <p class="text-muted">#1797, 4th Block, 14th Main Rd, MP Nager, Bhopal, Madhya Pradesh 462001</p>
+              <p class="text-muted">Ramnagar Nager, Bhopal, Madhya Pradesh 462001</p>
               <a href="#" class="btn btn-primary btn-lg">Call Us +91 9039587903</a>
             </div>
 
